# nba_analysis

./: .gitignore  README.MD  pyproject.toml  requirements.txt
exploration/: exploration.ipynb  test.py
src/api/: api.py
src/api/pipelines/: datascience_pipelines.py
src/api/players/: route.py  schema.py
