[tool.poetry]
name = "nba_analysis"
version = "0.1.0"
description = ""
authors = ["Gardette Mathieu <mathieu.gardette@mines-ales.org>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.2"
numpy = "^2.1.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
fastapi = {extras = ["standard"], version = "^0.113.0"}
ipykernel = "^6.29.5"
joblib = "^1.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
ipykernel = "^6.29.5"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
